--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,6 +158,7 @@ body {
 #footer #social-link a {
   text-decoration: none;
   color: white;
+  font-size: 2em;
 }
 
 #footer #social-link a:hover {
