--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -109,6 +109,7 @@
       a{
         text-decoration: none;
         color: white;
+        font-size: 2em;
       }
       a:hover{
         color: #b01e63;
